[package]
name = "s3-proxy"
version = "1.15.3"
edition = "2021"
# MSRV: File::unlock was stabilized in 1.89 and collides with fs2's FileExt::unlock.
# Earlier toolchains fail with E0658 on the unlock() call sites in src/journal_consolidator.rs.
rust-version = "1.89"

[dependencies]
# Async runtime and HTTP server
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Property-based testing
quickcheck = "1.0"
quickcheck_macros = "1.0"

# TLS support
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
ring = "0.17"
# rustls-native-certs: OS trust store loader (0.8 drops rustls-pemfile dep, resolves RUSTSEC-2025-0134)
rustls-native-certs = "0.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rcgen = "0.13"
time = { version = "0.3", features = ["macros"] }
webpki-roots = "0.26"

# Service abstraction for connection pooling (used by CustomHttpsConnector in https_connector.rs)
tower = "0.5"

# Compression
lz4_flex = "0.11.6"

# Hashing
blake3 = "1.5"

# File locking for shared cache coordination
fs2 = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking and DNS (hickory is the maintained successor to trust-dns)
hickory-resolver = "0.26"
socket2 = { version = "0.5", features = ["all"] }

# Configuration
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async trait support (for dyn-compatible async traits)
async-trait = "0.1"

# RAII guard for cleanup
scopeguard = "1.2"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
futures = "0.3"
tokio-stream = "0.1"
pin-project = "1.0"
gethostname = "0.4"
hostname = "0.3"
libc = "0.2"
hex = "0.4"
httpdate = "1.0"
urlencoding = "2.1"
sha2 = "0.10"
percent-encoding = "2.3"
regex = "1.0"
fastrand = "2.0"

# Cache size tracking
rayon = "1.8"
walkdir = "2.4"

# Concurrent data structures
dashmap = "6.0"

# OpenTelemetry for OTLP metrics export (0.27 drops rand 0.8, resolves RUSTSEC-2026-0097 path 2)
opentelemetry = { version = "0.27", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = "0.27"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "winnt"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
filetime = "0.2"
ureq = "2.9"  # For health check HTTP requests in tests

[[example]]
name = "compression_demo"
path = "examples/compression_demo.rs"

[[example]]
name = "cache_consistency_demo"
path = "examples/cache_consistency_demo.rs"
